Спринт 6: доработать историю